menu item color fixed.

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
   width: 100%;
   font-size: 15px;
   box-sizing: border-box;
-  color: #ffffff;
   text-decoration: none;
+  color: #ffffff;
   padding: 9px 15px 10px 0;
   position: relative;
 }
@@ -108,9 +108,9 @@
     <!-- ここからメニュー -->
     <div class="menu-content">
       <ul>
-        <li>メニューアイテム１</li>
-        <li>メニューアイテム２</li>
-        <li>メニューアイテム３</li>
+        <li><a href="#">メニューアイテム１</a></li>
+        <li><a href="#">メニューアイテム２</a></li>
+        <li><a href="#">メニューアイテム３</a></li>
       </ul>
     </div>
     <!-- ここまでメニュー -->
